--- a/client/src/assets/Styles/layout/_base.scss
+++ b/client/src/assets/Styles/layout/_base.scss
@@ -6,7 +6,8 @@
 
 :root {
   --bg: #121212;
-  --secondary-bg: #292929;
+  --secondary-bg: #161616;
+  --light-primary: #615ef02e;
   --border: #323232;
   --primary: #6b8afd;
   --secondary: #2e333d;
@@ -17,7 +18,8 @@
 }
 .light {
   --bg: #fff;
-  --secondary-bg: #f8f8f8;
+  --secondary-bg: #fcfbfb;
+  --light-primary: #615ef012;
   --border: #dfdfdf;
   --primary: #615ef0;
   --secondary: #f1f1f1;
