--- a/client/src/assets/Styles/global/style.css
+++ b/client/src/assets/Styles/global/style.css
@@ -4,7 +4,8 @@
 @tailwind utilities;
 :root {
   --bg: #121212;
-  --secondary-bg: #292929;
+  --secondary-bg: #161616;
+  --light-primary: #615ef02e;
   --border: #323232;
   --primary: #6b8afd;
   --secondary: #2e333d;
@@ -16,7 +17,8 @@
 
 .light {
   --bg: #fff;
-  --secondary-bg: #f8f8f8;
+  --secondary-bg: #fcfbfb;
+  --light-primary: #615ef012;
   --border: #dfdfdf;
   --primary: #615ef0;
   --secondary: #f1f1f1;
