--- a/client/src/assets/Styles/layout/_base.scss
+++ b/client/src/assets/Styles/layout/_base.scss
@@ -15,6 +15,7 @@
   --text-2: #fff;
   --error: #b13b3b;
   --shadow: #ffffff20;
+  --green: #68d391;
 }
 .light {
   --bg: #fff;
@@ -27,6 +28,7 @@
   --text-2: #fff;
   --error: #a50e0e;
   --shadow: #00000017;
+  --green: #68d391;
 }
 @layer utilities {
   .center_y {
